// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`associated_products module getAllAssociatedRepoBranchesEntries should get all repo branches info for specified associated products 1`] = `
Object {
  "_id": "6243aa3f0aae3635a59a1150",
  "branches": Array [
    Object {
      "active": true,
      "buildsWithSnooty": true,
      "gitBranchName": "master",
      "id": "62e293ce8b1d857926ab4cd8",
      "isStableBranch": false,
      "publishOriginalBranchName": true,
      "urlAliases": Array [
        "upcoming",
        "v1.5",
      ],
      "urlSlug": "upcoming",
      "versionSelectorLabel": "1.5 (upcoming)",
    },
    Object {
      "active": true,
      "buildsWithSnooty": true,
      "gitBranchName": "v1.4",
      "id": "62e293ce8b1d857926ab4cd9",
      "isStableBranch": true,
      "publishOriginalBranchName": true,
      "urlAliases": Array [
        "stable",
        "v1.4",
      ],
      "urlSlug": "stable",
      "versionSelectorLabel": "1.4.0 (stable)",
    },
    Object {
      "active": true,
      "buildsWithSnooty": true,
      "gitBranchName": "v1.3",
      "id": "6398fd2748e43bdf97398970",
      "isStableBranch": false,
      "publishOriginalBranchName": false,
      "urlAliases": Array [
        "v1.3",
        "v1.3.0",
      ],
      "urlSlug": "v1.3",
      "versionSelectorLabel": "1.3",
    },
    Object {
      "active": true,
      "buildsWithSnooty": true,
      "gitBranchName": "v1.2",
      "id": "63769111dd1d7476362b4b3a",
      "isStableBranch": false,
      "publishOriginalBranchName": true,
      "urlAliases": Array [
        "v1.2",
        "v1.2.0",
        "v1.2.1",
      ],
      "urlSlug": "v1.2",
      "versionSelectorLabel": "1.2",
    },
    Object {
      "active": true,
      "buildsWithSnooty": true,
      "gitBranchName": "v1.1",
      "id": "6376904fdd1d7476362b4b37",
      "isStableBranch": false,
      "publishOriginalBranchName": true,
      "urlAliases": Array [
        "v1.1",
        "v1.1.0",
        "v1.1.2",
        "v1.1.3",
        "v1.1.4",
        "v1.1.5",
        "v1.1.6",
        "v1.1.7",
      ],
      "urlSlug": "v1.1",
      "versionSelectorLabel": "1.1",
    },
    Object {
      "active": true,
      "buildsWithSnooty": true,
      "gitBranchName": "v1.0",
      "id": "62e293ce8b1d857926ab4cda",
      "isStableBranch": false,
      "publishOriginalBranchName": true,
      "urlAliases": Array [
        null,
      ],
      "urlSlug": "v1.0",
      "versionSelectorLabel": "1.0",
    },
  ],
  "bucket": Object {
    "dev": "docs-mongodb-org-dev",
    "dotcomprd": "docs-atlas-dotcomprd",
    "dotcomstg": "docs-atlas-dotcomstg",
    "prd": "docs-mongodb-org-prd",
    "regression": "docs-mongodb-org-stg",
    "stg": "docs-mongodb-org-stg",
  },
  "groups": null,
  "prefix": Object {
    "dotcomprd": "docs/atlas/cli",
    "dotcomstg": "docs-qa/atlas/cli",
    "prd": "atlas/cli",
    "stg": "atlas/cli",
  },
  "project": "atlas-cli",
  "repoName": "docs-atlas-cli",
  "search": Object {
    "categoryTitle": "Atlas CLI",
  },
  "url": Object {
    "dev": "https://docs-mongodborg-staging.corp.mongodb.com",
    "dotcomprd": "https://www.mongodb.com/",
    "dotcomstg": "https://mongodbcom-cdn.website.staging.corp.mongodb.com/",
    "prd": "https://docs.mongodb.com",
    "regression": "https://docs-mongodbcom-integration.corp.mongodb.com",
    "stg": "https://docs-mongodborg-staging.corp.mongodb.com",
  },
}
`;

exports[`associated_products module getAssociatedProducts and shapeToCsCursor getAssociatedProducts returns an aggregation cursor for metadata, grouped by most recent build_id 1`] = `
Object {
  "_id": Object {
    "branch": "master",
    "project": "atlas-cli",
  },
  "most_recent": Object {
    "_id": "638f6d6895aec59ccde1bc86",
    "branch": "master",
    "build_id": "638f6d6895aec59ccde1bc6a",
    "created_at": Object {
      "$date": Object {
        "$numberLong": "1670344040000",
      },
    },
    "eol": false,
    "parentPaths": Object {
      "atlas-cli-changelog": Array [],
      "atlas-cli-env-variables": Array [
        "connect-atlas-cli",
      ],
      "atlas-cli-getting-started": Array [
        "atlas-cli-tutorials",
      ],
      "atlas-cli-quickstart": Array [
        "atlas-cli-tutorials",
      ],
      "atlas-cli-save-connection-settings": Array [
        "connect-atlas-cli",
      ],
      "atlas-cli-tutorials": Array [],
      "cluster-config-file": Array [
        "reference",
      ],
      "compatibility": Array [
        "install-atlas-cli",
      ],
      "configure-optional-settings": Array [],
      "connect-atlas-cli": Array [],
      "install-atlas-cli": Array [],
      "migrate-to-atlas-cli": Array [
        "connect-atlas-cli",
      ],
      "reference": Array [],
      "telemetry": Array [
        "configure-optional-settings",
      ],
    },
    "project": "atlas-cli",
    "slugToTitle": Object {
      "atlas-cli-changelog": Array [
        Object {
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "text",
          "value": "Atlas CLI Changelog",
        },
      ],
      "atlas-cli-commands": Array [
        Object {
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "text",
          "value": "Atlas CLI Commands",
        },
      ],
      "atlas-cli-env-variables": Array [
        Object {
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "text",
          "value": "Atlas CLI Environment Variables",
        },
      ],
      "atlas-cli-getting-started": Array [
        Object {
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "text",
          "value": "Get Started with ",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "start": Object {
                  "line": 0,
                },
              },
              "type": "text",
              "value": "Atlas",
            },
          ],
          "name": "service",
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "substitution_reference",
        },
      ],
      "atlas-cli-quickstart": Array [
        Object {
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "text",
          "value": "Create and Configure an ",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "start": Object {
                  "line": 0,
                },
              },
              "type": "text",
              "value": "Atlas",
            },
          ],
          "name": "service",
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "substitution_reference",
        },
        Object {
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "text",
          "value": " Cluster",
        },
      ],
      "atlas-cli-save-connection-settings": Array [
        Object {
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "text",
          "value": "Save Connection Settings",
        },
      ],
      "atlas-cli-tutorials": Array [
        Object {
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "text",
          "value": "Manage ",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "start": Object {
                  "line": 0,
                },
              },
              "type": "text",
              "value": "Atlas",
            },
          ],
          "name": "service",
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "substitution_reference",
        },
        Object {
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "text",
          "value": " from the Atlas CLI",
        },
      ],
      "cluster-config-file": Array [
        Object {
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "text",
          "value": "Cluster Configuration File",
        },
      ],
      "compatibility": Array [
        Object {
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "text",
          "value": "Check Compatibility",
        },
      ],
      "configure-optional-settings": Array [
        Object {
          "position": Object {
            "start": Object {
              "line": 3,
            },
          },
          "type": "text",
          "value": "Configure Optional Settings",
        },
      ],
      "connect-atlas-cli": Array [
        Object {
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "text",
          "value": "Connect from the Atlas CLI",
        },
      ],
      "index": Array [
        Object {
          "position": Object {
            "start": Object {
              "line": 8,
            },
          },
          "type": "text",
          "value": "What is the Atlas CLI?",
        },
      ],
      "install-atlas-cli": Array [
        Object {
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "text",
          "value": "Install or Update the Atlas CLI",
        },
      ],
      "migrate-to-atlas-cli": Array [
        Object {
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "text",
          "value": "Migrate to the Atlas CLI",
        },
      ],
      "reference": Array [
        Object {
          "position": Object {
            "start": Object {
              "line": 3,
            },
          },
          "type": "text",
          "value": "Reference",
        },
      ],
      "telemetry": Array [
        Object {
          "position": Object {
            "start": Object {
              "line": 4,
            },
          },
          "type": "text",
          "value": "Configure Telemetry",
        },
      ],
    },
    "static_files": Object {},
    "title": "Atlas Command Line Interface",
    "toctree": Object {
      "children": Array [
        Object {
          "children": Array [],
          "options": Object {
            "drawer": true,
          },
          "slug": "/",
          "title": Array [
            Object {
              "position": Object {
                "start": Object {
                  "line": 0,
                },
              },
              "type": "text",
              "value": "Overview",
            },
          ],
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "options": Object {
                "drawer": false,
              },
              "slug": "compatibility",
              "title": Array [
                Object {
                  "position": Object {
                    "start": Object {
                      "line": 4,
                    },
                  },
                  "type": "text",
                  "value": "Check Compatibility",
                },
              ],
            },
          ],
          "options": Object {
            "drawer": false,
          },
          "slug": "install-atlas-cli",
          "title": Array [
            Object {
              "position": Object {
                "start": Object {
                  "line": 4,
                },
              },
              "type": "text",
              "value": "Install or Update the Atlas CLI",
            },
          ],
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "options": Object {
                "drawer": true,
              },
              "slug": "atlas-cli-save-connection-settings",
              "title": Array [
                Object {
                  "position": Object {
                    "start": Object {
                      "line": 4,
                    },
                  },
                  "type": "text",
                  "value": "Save Connection Settings",
                },
              ],
            },
            Object {
              "children": Array [],
              "options": Object {
                "drawer": false,
              },
              "slug": "atlas-cli-env-variables",
              "title": Array [
                Object {
                  "position": Object {
                    "start": Object {
                      "line": 4,
                    },
                  },
                  "type": "text",
                  "value": "Atlas CLI Environment Variables",
                },
              ],
            },
            Object {
              "children": Array [],
              "options": Object {
                "drawer": false,
              },
              "slug": "migrate-to-atlas-cli",
              "title": Array [
                Object {
                  "position": Object {
                    "start": Object {
                      "line": 4,
                    },
                  },
                  "type": "text",
                  "value": "Migrate to the Atlas CLI",
                },
              ],
            },
          ],
          "options": Object {
            "drawer": false,
          },
          "slug": "connect-atlas-cli",
          "title": Array [
            Object {
              "position": Object {
                "start": Object {
                  "line": 4,
                },
              },
              "type": "text",
              "value": "Connect from the Atlas CLI",
            },
          ],
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "options": Object {
                "drawer": false,
              },
              "slug": "telemetry",
              "title": Array [
                Object {
                  "position": Object {
                    "start": Object {
                      "line": 4,
                    },
                  },
                  "type": "text",
                  "value": "Configure Telemetry",
                },
              ],
            },
          ],
          "options": Object {
            "drawer": true,
          },
          "slug": "configure-optional-settings",
          "title": Array [
            Object {
              "position": Object {
                "start": Object {
                  "line": 3,
                },
              },
              "type": "text",
              "value": "Configure Optional Settings",
            },
          ],
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "options": Object {
                "drawer": true,
              },
              "slug": "atlas-cli-getting-started",
              "title": Array [
                Object {
                  "position": Object {
                    "start": Object {
                      "line": 4,
                    },
                  },
                  "type": "text",
                  "value": "Get Started with ",
                },
                Object {
                  "children": Array [
                    Object {
                      "position": Object {
                        "start": Object {
                          "line": 0,
                        },
                      },
                      "type": "text",
                      "value": "Atlas",
                    },
                  ],
                  "name": "service",
                  "position": Object {
                    "start": Object {
                      "line": 4,
                    },
                  },
                  "type": "substitution_reference",
                },
              ],
            },
            Object {
              "children": Array [],
              "options": Object {
                "drawer": false,
              },
              "slug": "atlas-cli-quickstart",
              "title": Array [
                Object {
                  "position": Object {
                    "start": Object {
                      "line": 4,
                    },
                  },
                  "type": "text",
                  "value": "Create and Configure an ",
                },
                Object {
                  "children": Array [
                    Object {
                      "position": Object {
                        "start": Object {
                          "line": 0,
                        },
                      },
                      "type": "text",
                      "value": "Atlas",
                    },
                  ],
                  "name": "service",
                  "position": Object {
                    "start": Object {
                      "line": 4,
                    },
                  },
                  "type": "substitution_reference",
                },
                Object {
                  "position": Object {
                    "start": Object {
                      "line": 4,
                    },
                  },
                  "type": "text",
                  "value": " Cluster",
                },
              ],
            },
          ],
          "options": Object {
            "drawer": false,
          },
          "slug": "atlas-cli-tutorials",
          "title": Array [
            Object {
              "position": Object {
                "start": Object {
                  "line": 4,
                },
              },
              "type": "text",
              "value": "Manage ",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "start": Object {
                      "line": 0,
                    },
                  },
                  "type": "text",
                  "value": "Atlas",
                },
              ],
              "name": "service",
              "position": Object {
                "start": Object {
                  "line": 4,
                },
              },
              "type": "substitution_reference",
            },
            Object {
              "position": Object {
                "start": Object {
                  "line": 4,
                },
              },
              "type": "text",
              "value": " from the Atlas CLI",
            },
          ],
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "options": Object {
                "drawer": true,
              },
              "slug": "cluster-config-file",
              "title": Array [
                Object {
                  "position": Object {
                    "start": Object {
                      "line": 4,
                    },
                  },
                  "type": "text",
                  "value": "Cluster Configuration File",
                },
              ],
            },
          ],
          "options": Object {
            "drawer": true,
          },
          "slug": "reference",
          "title": Array [
            Object {
              "position": Object {
                "start": Object {
                  "line": 3,
                },
              },
              "type": "text",
              "value": "Reference",
            },
          ],
        },
        Object {
          "children": Array [],
          "options": Object {
            "drawer": false,
          },
          "slug": "atlas-cli-changelog",
          "title": Array [
            Object {
              "position": Object {
                "start": Object {
                  "line": 4,
                },
              },
              "type": "text",
              "value": "Atlas CLI Changelog",
            },
          ],
        },
      ],
      "slug": "/",
      "title": Array [
        Object {
          "position": Object {
            "start": Object {
              "line": 0,
            },
          },
          "type": "text",
          "value": "Atlas Command Line Interface",
        },
      ],
    },
    "toctreeOrder": Array [
      "/",
      "/",
      "install-atlas-cli",
      "compatibility",
      "connect-atlas-cli",
      "atlas-cli-save-connection-settings",
      "atlas-cli-env-variables",
      "migrate-to-atlas-cli",
      "configure-optional-settings",
      "telemetry",
      "atlas-cli-tutorials",
      "atlas-cli-getting-started",
      "atlas-cli-quickstart",
      "reference",
      "cluster-config-file",
      "atlas-cli-changelog",
    ],
  },
}
`;

exports[`associated_products module getAssociatedProducts and shapeToCsCursor shapeToCsCursor returns copied ToCs (with slugs and urls), toctreeOrder, and their parent metadata document 1`] = `
Object {
  "atlas-cli": Object {
    "master": Object {
      "original": Object {
        "children": Array [
          Object {
            "children": Array [],
            "options": Object {
              "drawer": true,
            },
            "slug": "/",
            "title": Array [
              Object {
                "position": Object {
                  "start": Object {
                    "line": 0,
                  },
                },
                "type": "text",
                "value": "Overview",
              },
            ],
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "options": Object {
                  "drawer": false,
                },
                "slug": "compatibility",
                "title": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": "Check Compatibility",
                  },
                ],
              },
            ],
            "options": Object {
              "drawer": false,
            },
            "slug": "install-atlas-cli",
            "title": Array [
              Object {
                "position": Object {
                  "start": Object {
                    "line": 4,
                  },
                },
                "type": "text",
                "value": "Install or Update the Atlas CLI",
              },
            ],
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "options": Object {
                  "drawer": true,
                },
                "slug": "atlas-cli-save-connection-settings",
                "title": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": "Save Connection Settings",
                  },
                ],
              },
              Object {
                "children": Array [],
                "options": Object {
                  "drawer": false,
                },
                "slug": "atlas-cli-env-variables",
                "title": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": "Atlas CLI Environment Variables",
                  },
                ],
              },
              Object {
                "children": Array [],
                "options": Object {
                  "drawer": false,
                },
                "slug": "migrate-to-atlas-cli",
                "title": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": "Migrate to the Atlas CLI",
                  },
                ],
              },
            ],
            "options": Object {
              "drawer": false,
            },
            "slug": "connect-atlas-cli",
            "title": Array [
              Object {
                "position": Object {
                  "start": Object {
                    "line": 4,
                  },
                },
                "type": "text",
                "value": "Connect from the Atlas CLI",
              },
            ],
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "options": Object {
                  "drawer": false,
                },
                "slug": "telemetry",
                "title": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": "Configure Telemetry",
                  },
                ],
              },
            ],
            "options": Object {
              "drawer": true,
            },
            "slug": "configure-optional-settings",
            "title": Array [
              Object {
                "position": Object {
                  "start": Object {
                    "line": 3,
                  },
                },
                "type": "text",
                "value": "Configure Optional Settings",
              },
            ],
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "options": Object {
                  "drawer": true,
                },
                "slug": "atlas-cli-getting-started",
                "title": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": "Get Started with ",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "position": Object {
                          "start": Object {
                            "line": 0,
                          },
                        },
                        "type": "text",
                        "value": "Atlas",
                      },
                    ],
                    "name": "service",
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "substitution_reference",
                  },
                ],
              },
              Object {
                "children": Array [],
                "options": Object {
                  "drawer": false,
                },
                "slug": "atlas-cli-quickstart",
                "title": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": "Create and Configure an ",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "position": Object {
                          "start": Object {
                            "line": 0,
                          },
                        },
                        "type": "text",
                        "value": "Atlas",
                      },
                    ],
                    "name": "service",
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "substitution_reference",
                  },
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": " Cluster",
                  },
                ],
              },
            ],
            "options": Object {
              "drawer": false,
            },
            "slug": "atlas-cli-tutorials",
            "title": Array [
              Object {
                "position": Object {
                  "start": Object {
                    "line": 4,
                  },
                },
                "type": "text",
                "value": "Manage ",
              },
              Object {
                "children": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 0,
                      },
                    },
                    "type": "text",
                    "value": "Atlas",
                  },
                ],
                "name": "service",
                "position": Object {
                  "start": Object {
                    "line": 4,
                  },
                },
                "type": "substitution_reference",
              },
              Object {
                "position": Object {
                  "start": Object {
                    "line": 4,
                  },
                },
                "type": "text",
                "value": " from the Atlas CLI",
              },
            ],
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "options": Object {
                  "drawer": true,
                },
                "slug": "cluster-config-file",
                "title": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": "Cluster Configuration File",
                  },
                ],
              },
            ],
            "options": Object {
              "drawer": true,
            },
            "slug": "reference",
            "title": Array [
              Object {
                "position": Object {
                  "start": Object {
                    "line": 3,
                  },
                },
                "type": "text",
                "value": "Reference",
              },
            ],
          },
          Object {
            "children": Array [],
            "options": Object {
              "drawer": false,
            },
            "slug": "atlas-cli-changelog",
            "title": Array [
              Object {
                "position": Object {
                  "start": Object {
                    "line": 4,
                  },
                },
                "type": "text",
                "value": "Atlas CLI Changelog",
              },
            ],
          },
        ],
        "slug": "/",
        "title": Array [
          Object {
            "position": Object {
              "start": Object {
                "line": 0,
              },
            },
            "type": "text",
            "value": "Atlas Command Line Interface",
          },
        ],
      },
      "urlified": Object {
        "children": Array [
          Object {
            "children": Array [],
            "options": Object {
              "drawer": true,
            },
            "title": Array [
              Object {
                "position": Object {
                  "start": Object {
                    "line": 0,
                  },
                },
                "type": "text",
                "value": "Overview",
              },
            ],
            "url": "www.mongodb.com/docs/atlas-cli/",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "options": Object {
                  "drawer": false,
                },
                "title": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": "Check Compatibility",
                  },
                ],
                "url": "www.mongodb.com/docs/atlas-cli/compatibility",
              },
            ],
            "options": Object {
              "drawer": false,
            },
            "title": Array [
              Object {
                "position": Object {
                  "start": Object {
                    "line": 4,
                  },
                },
                "type": "text",
                "value": "Install or Update the Atlas CLI",
              },
            ],
            "url": "www.mongodb.com/docs/atlas-cli/install-atlas-cli",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "options": Object {
                  "drawer": true,
                },
                "title": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": "Save Connection Settings",
                  },
                ],
                "url": "www.mongodb.com/docs/atlas-cli/atlas-cli-save-connection-settings",
              },
              Object {
                "children": Array [],
                "options": Object {
                  "drawer": false,
                },
                "title": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": "Atlas CLI Environment Variables",
                  },
                ],
                "url": "www.mongodb.com/docs/atlas-cli/atlas-cli-env-variables",
              },
              Object {
                "children": Array [],
                "options": Object {
                  "drawer": false,
                },
                "title": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": "Migrate to the Atlas CLI",
                  },
                ],
                "url": "www.mongodb.com/docs/atlas-cli/migrate-to-atlas-cli",
              },
            ],
            "options": Object {
              "drawer": false,
            },
            "title": Array [
              Object {
                "position": Object {
                  "start": Object {
                    "line": 4,
                  },
                },
                "type": "text",
                "value": "Connect from the Atlas CLI",
              },
            ],
            "url": "www.mongodb.com/docs/atlas-cli/connect-atlas-cli",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "options": Object {
                  "drawer": false,
                },
                "title": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": "Configure Telemetry",
                  },
                ],
                "url": "www.mongodb.com/docs/atlas-cli/telemetry",
              },
            ],
            "options": Object {
              "drawer": true,
            },
            "title": Array [
              Object {
                "position": Object {
                  "start": Object {
                    "line": 3,
                  },
                },
                "type": "text",
                "value": "Configure Optional Settings",
              },
            ],
            "url": "www.mongodb.com/docs/atlas-cli/configure-optional-settings",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "options": Object {
                  "drawer": true,
                },
                "title": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": "Get Started with ",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "position": Object {
                          "start": Object {
                            "line": 0,
                          },
                        },
                        "type": "text",
                        "value": "Atlas",
                      },
                    ],
                    "name": "service",
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "substitution_reference",
                  },
                ],
                "url": "www.mongodb.com/docs/atlas-cli/atlas-cli-getting-started",
              },
              Object {
                "children": Array [],
                "options": Object {
                  "drawer": false,
                },
                "title": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": "Create and Configure an ",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "position": Object {
                          "start": Object {
                            "line": 0,
                          },
                        },
                        "type": "text",
                        "value": "Atlas",
                      },
                    ],
                    "name": "service",
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "substitution_reference",
                  },
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": " Cluster",
                  },
                ],
                "url": "www.mongodb.com/docs/atlas-cli/atlas-cli-quickstart",
              },
            ],
            "options": Object {
              "drawer": false,
            },
            "title": Array [
              Object {
                "position": Object {
                  "start": Object {
                    "line": 4,
                  },
                },
                "type": "text",
                "value": "Manage ",
              },
              Object {
                "children": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 0,
                      },
                    },
                    "type": "text",
                    "value": "Atlas",
                  },
                ],
                "name": "service",
                "position": Object {
                  "start": Object {
                    "line": 4,
                  },
                },
                "type": "substitution_reference",
              },
              Object {
                "position": Object {
                  "start": Object {
                    "line": 4,
                  },
                },
                "type": "text",
                "value": " from the Atlas CLI",
              },
            ],
            "url": "www.mongodb.com/docs/atlas-cli/atlas-cli-tutorials",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "options": Object {
                  "drawer": true,
                },
                "title": Array [
                  Object {
                    "position": Object {
                      "start": Object {
                        "line": 4,
                      },
                    },
                    "type": "text",
                    "value": "Cluster Configuration File",
                  },
                ],
                "url": "www.mongodb.com/docs/atlas-cli/cluster-config-file",
              },
            ],
            "options": Object {
              "drawer": true,
            },
            "title": Array [
              Object {
                "position": Object {
                  "start": Object {
                    "line": 3,
                  },
                },
                "type": "text",
                "value": "Reference",
              },
            ],
            "url": "www.mongodb.com/docs/atlas-cli/reference",
          },
          Object {
            "children": Array [],
            "options": Object {
              "drawer": false,
            },
            "title": Array [
              Object {
                "position": Object {
                  "start": Object {
                    "line": 4,
                  },
                },
                "type": "text",
                "value": "Atlas CLI Changelog",
              },
            ],
            "url": "www.mongodb.com/docs/atlas-cli/atlas-cli-changelog",
          },
        ],
        "title": Array [
          Object {
            "position": Object {
              "start": Object {
                "line": 0,
              },
            },
            "type": "text",
            "value": "Atlas Command Line Interface",
          },
        ],
        "url": "www.mongodb.com/docs/atlas-cli/",
      },
    },
  },
}
`;

exports[`associated_products module getAssociatedProducts and shapeToCsCursor shapeToCsCursor returns copied ToCs (with slugs and urls), toctreeOrder, and their parent metadata document 2`] = `
Object {
  "atlas-cli": Object {
    "master": Array [
      "/",
      "/",
      "install-atlas-cli",
      "compatibility",
      "connect-atlas-cli",
      "atlas-cli-save-connection-settings",
      "atlas-cli-env-variables",
      "migrate-to-atlas-cli",
      "configure-optional-settings",
      "telemetry",
      "atlas-cli-tutorials",
      "atlas-cli-getting-started",
      "atlas-cli-quickstart",
      "reference",
      "cluster-config-file",
      "atlas-cli-changelog",
    ],
  },
}
`;

exports[`associated_products module getRepoBranchesEntry should query repo branches for project and branch 1`] = `
Object {
  "_id": "6243aa3f0aae3635a59a1150",
  "branches": Array [
    Object {
      "active": true,
      "buildsWithSnooty": true,
      "gitBranchName": "master",
      "id": "62e293ce8b1d857926ab4cd8",
      "isStableBranch": false,
      "publishOriginalBranchName": true,
      "urlAliases": Array [
        "upcoming",
        "v1.5",
      ],
      "urlSlug": "upcoming",
      "versionSelectorLabel": "1.5 (upcoming)",
    },
    Object {
      "active": true,
      "buildsWithSnooty": true,
      "gitBranchName": "v1.4",
      "id": "62e293ce8b1d857926ab4cd9",
      "isStableBranch": true,
      "publishOriginalBranchName": true,
      "urlAliases": Array [
        "stable",
        "v1.4",
      ],
      "urlSlug": "stable",
      "versionSelectorLabel": "1.4.0 (stable)",
    },
    Object {
      "active": true,
      "buildsWithSnooty": true,
      "gitBranchName": "v1.3",
      "id": "6398fd2748e43bdf97398970",
      "isStableBranch": false,
      "publishOriginalBranchName": false,
      "urlAliases": Array [
        "v1.3",
        "v1.3.0",
      ],
      "urlSlug": "v1.3",
      "versionSelectorLabel": "1.3",
    },
    Object {
      "active": true,
      "buildsWithSnooty": true,
      "gitBranchName": "v1.2",
      "id": "63769111dd1d7476362b4b3a",
      "isStableBranch": false,
      "publishOriginalBranchName": true,
      "urlAliases": Array [
        "v1.2",
        "v1.2.0",
        "v1.2.1",
      ],
      "urlSlug": "v1.2",
      "versionSelectorLabel": "1.2",
    },
    Object {
      "active": true,
      "buildsWithSnooty": true,
      "gitBranchName": "v1.1",
      "id": "6376904fdd1d7476362b4b37",
      "isStableBranch": false,
      "publishOriginalBranchName": true,
      "urlAliases": Array [
        "v1.1",
        "v1.1.0",
        "v1.1.2",
        "v1.1.3",
        "v1.1.4",
        "v1.1.5",
        "v1.1.6",
        "v1.1.7",
      ],
      "urlSlug": "v1.1",
      "versionSelectorLabel": "1.1",
    },
    Object {
      "active": true,
      "buildsWithSnooty": true,
      "gitBranchName": "v1.0",
      "id": "62e293ce8b1d857926ab4cda",
      "isStableBranch": false,
      "publishOriginalBranchName": true,
      "urlAliases": Array [
        null,
      ],
      "urlSlug": "v1.0",
      "versionSelectorLabel": "1.0",
    },
  ],
  "bucket": Object {
    "dev": "docs-mongodb-org-dev",
    "dotcomprd": "docs-atlas-dotcomprd",
    "dotcomstg": "docs-atlas-dotcomstg",
    "prd": "docs-mongodb-org-prd",
    "regression": "docs-mongodb-org-stg",
    "stg": "docs-mongodb-org-stg",
  },
  "groups": null,
  "prefix": Object {
    "dotcomprd": "docs/atlas/cli",
    "dotcomstg": "docs-qa/atlas/cli",
    "prd": "atlas/cli",
    "stg": "atlas/cli",
  },
  "project": "atlas-cli",
  "repoName": "docs-atlas-cli",
  "search": Object {
    "categoryTitle": "Atlas CLI",
  },
  "url": Object {
    "dev": "https://docs-mongodborg-staging.corp.mongodb.com",
    "dotcomprd": "https://www.mongodb.com/",
    "dotcomstg": "https://mongodbcom-cdn.website.staging.corp.mongodb.com/",
    "prd": "https://docs.mongodb.com",
    "regression": "https://docs-mongodbcom-integration.corp.mongodb.com",
    "stg": "https://docs-mongodborg-staging.corp.mongodb.com",
  },
}
`;

exports[`associated_products module umbrellaMetadataEntry returns the most recent umbrella metadata for specified project in passed metadata 1`] = `undefined`;
